--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -20,31 +20,21 @@
 
     <Button
         android:id="@+id/btn_scan"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:background="@drawable/qrscann"
         android:textSize="16sp" />
 
 
     <TextView
+        android:id="@+id/result_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Resultat"
-        android:textColor="#ABCED3"
+        android:layout_marginTop="20sp"
         android:fontFamily="@font/ml"
         android:gravity="center"
-        android:textSize="22sp"
-        android:layout_marginTop="20sp"
-        android:id="@+id/result_text"
-        />
-
-    <Button
-        android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/next"
-        android:fontFamily="@font/mm"
-        android:layout_marginTop="20dp"
-        />
+        android:text="Codi QR"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="22sp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
